2005-04-07  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: performance improvements with handling
	  symbols

2005-04-06  John Levon  <levon@movementarian.org>

	* libpp/populate.h:
	* libpp/populate.cpp:
	* libpp/callgraph_container.cpp:
	* libutil++/cached_value.h:
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp:
	* pp/opannotate.cpp:
	* pp/opreport.cpp:
	* libutil++/tests/Makefile.am:
	* libutil++/tests/cached_value_tests.cpp: tweak CRC buffer.
	Do delayed debug info searching (makes no actual difference).

2005-04-05  John Levon  <levon@movementarian.org>

	* libpp/format_output.cpp: add separator at first function
	  for opreport -c

2005-04-05  John Levon  <levon@movementarian.org>

	* libpp/callgraph_container.h:
	* libpp/callgraph_container.cpp:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp: implement -i / -e for
	  opreport -c

2005-04-05  John Levon  <levon@movementarian.org>

	* libpp/format_output.h:
	* libpp/format_output.cpp:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp: implement --global-percent
	  for opreport -c

2005-04-04  John Levon  <levon@movementarian.org>

	* configure.in:
	* doc/Makefile.am:
	* doc/oprofile.xml:
	* doc/opstack.1.in:
	* doc/opreport.1.in:
	* doc/oprofile.1.in:
	* pp/.cvsignore:
	* pp/Makefile.am:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp:
	* pp/opreport_options.h:
	* pp/opstack.cpp:
	* pp/opstack_options.cpp:
	* pp/opstack_options.h: remove opstack in favour of opreport -c

	* libpp/callgraph_container.cpp: fix for new call-graph code

	* doc/oprofile.xml:
	* doc/oparchive.1.in: document -x, re-organise manual

2005-04-04 Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: further check for bfd synthesised
	  symbols support

2005-04-04  John Levon  <levon@movementarian.org>

	* libpp/callgraph_container.cpp:
	* libpp/callgraph_container.h:
	* libpp/format_flags.h:
	* libpp/format_output.cpp:
	* libpp/format_output.h:
	* libpp/symbol.cpp:
	* libpp/symbol.h:
	* libpp/symbol_sort.cpp: